add change password, user profile with logout, small change to user details and create user dialog

--- a/src/app/features/nav-bar/nav-bar/nav-bar.component.html
+++ b/src/app/features/nav-bar/nav-bar/nav-bar.component.html
@@ -1,4 +1,5 @@
-<p-menubar [model]="menuItems">
+<div class="navbar-wrapper">
+  <p-menubar [model]="menuItems">
     <div
       style="
         margin-left: auto;
@@ -41,3 +42,5 @@
       </div>
     </div>
   </p-menubar>
+</div>
+  
