--- a/src/app/emp-dev-plan/emp-dev-plan.component.html
+++ b/src/app/emp-dev-plan/emp-dev-plan.component.html
@@ -15,7 +15,7 @@
       <tr>
         <th style="width: 10%">No.</th>
         <th style="width: 70%">Keterangan</th>
-        <!-- <th style="width: 20%">Action</th> -->
+        <th style="width: 20%">Action</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-row let-i="rowIndex">
@@ -52,21 +52,3 @@
 <p-button label="Simpan" icon="pi pi-save" (click)="savePlans()"></p-button>
 
 <!-- tabel tampilkan data yng diinput user -->
-
-<h2>Daftar Semua Keterangan</h2>
-<p-table [value]="savedPlans" [paginator]="true" [rows]="5">
-  <ng-template pTemplate="header">
-    <tr>
-      <th>No.</th>
-      <th>Nama Group</th>
-      <th>Keterangan</th>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-plan let-i="rowIndex">
-    <tr>
-      <td>{{ i + 1 }}</td>
-      <td>{{ plan.dev_plan_id }}</td>
-      <td>{{ plan.plan_detail }}</td>
-    </tr>
-  </ng-template>
-</p-table>
