tambahin nav bar module

--- a/src/app/ass-summary/ass-summary.component.html
+++ b/src/app/ass-summary/ass-summary.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="isLoading">Loading...</div>
 <div *ngIf="error">{{ error }}</div>
+<app-nav-bar></app-nav-bar>
 
 <h2>Assesment Summary</h2>
 
