--- a/src/app/emp-technical-skill/emp-technical-skill.component.html
+++ b/src/app/emp-technical-skill/emp-technical-skill.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <h1>Insert emp tech skill</h1>
 <label for="assessmentYear">Assessment Year:</label>
 <input type="number" id="assessmentYear" [(ngModel)]="assessmentYear" />
