add reset password, fix some form, initial ass summary

--- a/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
+++ b/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
@@ -27,8 +27,10 @@
         <td>
           <p-dropdown
             [options]="scoreOptions"
+            [(ngModel)]="skill.score"
             placeholder="Pilih nilai"
             [appendTo]="'body'"
+            (onChange)="logSkillId(skill.id, skill.score)"
           >
             > ></p-dropdown
           >
