--- a/src/app/emp-dev-plan-table/emp-dev-plan-table.component.html
+++ b/src/app/emp-dev-plan-table/emp-dev-plan-table.component.html
@@ -18,7 +18,7 @@
         <th style="width: 10%">No.</th>
         <th style="width: 70%">Plan Detail</th>
         <th style="width: 20%">Tanggal Dibuat</th>
-        <th style="width: 20%">Action</th>
+        <!-- <th style="width: 20%">Action</th> -->
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-row let-i="rowIndex">
@@ -30,14 +30,14 @@
         <td>
           {{ row.created_at }}
         </td>
-        <td>
+        <!-- <td>
           <button
             pButton
             label="Delete"
             class="p-button-danger"
             (click)="deleteEmpDevPlan(row.id)"
           ></button>
-        </td>
+        </td> -->
       </tr>
     </ng-template>
   </p-table>
