--- a/src/app/emp-technical-skill/emp-technical-skill.component.html
+++ b/src/app/emp-technical-skill/emp-technical-skill.component.html
@@ -1,64 +1,76 @@
 <app-nav-bar></app-nav-bar>
-<h1>Insert emp tech skill</h1>
-<label for="assessmentYear">Assessment Year:</label>
-<input type="number" id="assessmentYear" [(ngModel)]="assessmentYear" />
+<div class="container">
+  <h1 class="title">FORM EVALUASI KINERJA - KEAHLIAN TEKNIS</h1>
 
-<div *ngFor="let group of groupData">
-  <h3>{{ group.technical_skill }}</h3>
+  <div class="form-group">
+    <label for="assessmentYear">Assessment Year:</label>
+    <input
+      type="number"
+      id="assessmentYear"
+      [(ngModel)]="assessmentYear"
+      disabled="true"
+      class="input-field"
+    />
+  </div>
 
-  <!-- PrimeNG Table -->
-  <p-table [value]="group.rows" [paginator]="false">
-    <ng-template pTemplate="header">
-      <tr>
-        <th style="width: 10%">No.</th>
-        <th style="width: 70%">Keterangan</th>
-        <th style="width: 20%">Tingkat kemahiran (level)</th>
-        <th style="width: 20%">Action</th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-row let-i="rowIndex">
-      <tr>
-        <td>{{ i + 1 }}</td>
-        <td>
-          <textarea
-            pInputTextarea
-            [(ngModel)]="row.tech_detail"
-            (blur)="
-              logTechId(row.tech_skill_id, row.tech_detail, row.score, row)
-            "
-            [style.width]="'100%'"
-            rows="3"
-          >
-          </textarea>
-        </td>
-        <td>
-          <p-dropdown
-            [options]="scoreOptions"
-            [(ngModel)]="row.score"
-            placeholder="Pilih level"
-            [appendTo]="'body'"
-            (onChange)="
-              logTechId(row.tech_skill_id, row.tech_detail, row.score, row)
-            "
-          >
-          </p-dropdown>
-        </td>
+  <div *ngFor="let group of groupData" class="group-container">
+    <h3 class="group-title">{{ group.technical_skill }}</h3>
 
-        <td>
-          <p-button
-            label="Hapus"
-            icon="pi pi-trash"
-            class="p-button-sm p-button-danger"
-            (click)="deleteRow(group, i)"
-          >
-          </p-button>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
+    <p-table [value]="group.rows" [paginator]="false" class="data-table">
+      <ng-template pTemplate="header">
+        <tr>
+          <th style="width: 10%">No.</th>
+          <th style="width: 70%">Keterangan</th>
+          <th style="width: 20%">Tingkat kemahiran (level)</th>
+          <th style="width: 20%">Action</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-row let-i="rowIndex">
+        <tr>
+          <td>{{ i + 1 }}</td>
+          <td>
+            <textarea
+              pInputTextarea
+              [(ngModel)]="row.tech_detail"
+              (blur)="
+                logTechId(row.tech_skill_id, row.tech_detail, row.score, row)
+              "
+              [style.width]="'100%'"
+              rows="3"
+            >
+            </textarea>
+          </td>
+          <td>
+            <p-dropdown
+              [options]="scoreOptions"
+              [(ngModel)]="row.score"
+              placeholder="Pilih level"
+              [appendTo]="'body'"
+              (onChange)="
+                logTechId(row.tech_skill_id, row.tech_detail, row.score, row)
+              "
+            >
+            </p-dropdown>
+          </td>
 
-  <p-button label="Tambah Baris" icon="pi pi-plus" (click)="addRow(group)">
-  </p-button>
+          <td>
+            <p-button
+              label="Hapus"
+              icon="pi pi-trash"
+              class="p-button-sm p-button-danger"
+              (click)="deleteRow(group, i)"
+            >
+            </p-button>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+
+    <p-button label="Tambah Row" icon="pi pi-plus" (click)="addRow(group)">
+    </p-button>
+  </div>
+  <br />
+  <div class="button-container">
+    <p-button label="Simpan" icon="pi pi-save" (click)="saveTechs()"></p-button>
+  </div>
 </div>
-<br />
-<p-button label="Simpan" icon="pi pi-save" (click)="saveTechs()"></p-button>
