--- a/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
+++ b/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
@@ -40,6 +40,7 @@
               placeholder="Pilih nilai"
               [appendTo]="'body'"
               (onChange)="logSkillId(skill.id, $event.value)"
+              [disabled]="isSkillDisabled(skill.id)"
             >
               > ></p-dropdown
             >
