--- a/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
+++ b/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
@@ -10,6 +10,7 @@
       id="assessmentYear"
       [(ngModel)]="assessmentYear"
       disabled="true"
+      class="input-field"
     />
   </div>
 
